2012-07-26  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* lua/loslibext.c os_gettimeofday): Use int64_t (from W32TeX).

2012-07-25  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* image/pdftoepdf.cc (get_file_checksum): Use uint64_t and PRIu64.
	* image/writejp2.w, lua/loslibext.c: Use uint64_t.

2012-07-23  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* tex/texfileio.w (runpopen): Sync with ../lib/texmfmp.c.

2012-07-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* image/writejbig2.w: Use LONGINTEGER_PRI, not LONGINTEGER_PRId.
	* pdf/pdfgen.w: Use LONGINTEGER_PRI, not LONGINTEGER_PRIi.

2012-07-14  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* utils/utils.w: Use EXIT_FAILURE instead of EX_SOFTWARE.

2012-07-13  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* pdf/pdfgen.w: Cast xfseeko() arg2 to avoid MSVC warning.

2012-07-09  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* tex/texfileio.w (runpopen): Sync with ../lib/texmfmp.c.

2012-07-07  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* luatex.c (shell_cmd_is_allowed): Change Arg1 from 'const char **'
	into 'const char *'; sync with ../lib/texmfmp.c.
	* luatex.h, lua/liolib.c, lua/loslibext.c, tex/texfileio.w: Adapt.

	* lua/liolib.c, luascripts/txt2zlib.w: Use binary file io mode.
	From Akira Kakuto <kakuto@fuk.kindai.ac.jp> (W32TeX).

2012-05-22  Taco Hoekwater  <taco@luatex.org>

	* lua/lkpselib.c: new function kpse.default_texmfcnf() that
	reports the value of DEFAULT_TEXMFCNF, for the benefit of
	context mkiv on Debian.

2012-05-22  Taco Hoekwater  <taco@luatex.org>

	* luafontloader/fontforge/fontforge/splinesave.c,
	luafontloader/fontforge/fontforge/splinefont.h: drop parts of the
	Type1 saving routines (unused) to remove a compiler warning.

	* pdf/pdftypes.h, lua/limglib.c, image/epdf.h, image/writeimg.w,
	image/writejbig2.w, ptexlib.h: more off_t trouble.

2012-05-21  Taco Hoekwater  <taco@luatex.org>

	* tex/printing.w, lua/ltokenlib.c, lua/llanglib.c, lua/llualib.c,
	lua/lnodelib.c, lua/luainit.w, lua/ltexiolib.c,